--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,5 @@ markers =
     change: Tests that modify name of a user
     check: Tests that check users name
     http: Tests that check HTTP Protocol
-    api: Test That check api
+    api: Tests That check api
+    database: Tests for database
