--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ markers =
     http: Tests that check HTTP Protocol
     api: Tests That check api
     database: Tests for database
+    ui: Tests that check UI
